# chennaipy_demo_may_24

./: .gitignore  1_thread_pool_executor.ipynb  2_mysterious_thread_pool_executor copy.ipynb  2_mysterious_thread_pool_executor.ipynb  3_asyncio_example.py  4_process_pool_executor.py  5_free_threaded_mode.py  README.md  pyproject.toml  sub_interpreter_high_level.py
sub_interpreter_demo/: demo.py  setup.py
sub_interpreter_demo/benchmarking/: isolated_benchmark.py
