[project]
name = "chennaipy-demo-may-24"
version = "0.1.0"
description = ""
authors = [
    {name = "guruvi",email = "guruvigneshwaran@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "notebook (>=7.4.2,<8.0.0)",
    "aiohttp (>=3.11.18,<4.0.0)",
    "setuptools (>=80.8.0,<81.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
